--- a/exploring_crossref.Rmd
+++ b/exploring_crossref.Rmd
@@ -6,10 +6,17 @@ output: html_notebook
 - library data
 - automation
 
+## Load Library Package
+
+"Use the [Tidyverse](https://www.tidyverse.org/), Luke" -- O-W.Kenobi 
+
 ```{r}
 library(tidyverse)
 ```
 
+## Get Data
+
+Crossref data used from the **Setup** to the [LC OpenRefine Workshop](https://librarycarpentry.org/lc-open-refine/setup.html)
 
 ```{r}
 crossref_data <- read_csv("https://raw.githubusercontent.com/LibraryCarpentry/lc-open-refine/gh-pages/data/doaj-article-sample.csv", 
@@ -21,20 +28,30 @@ crossref_data <- read_csv("https://raw.githubusercontent.com/LibraryCarpentry/lc
 crossref_data
 ```
 
+## Facetting
+
+Generate a quick table of the languages represented in the dataframe.  Looks like English (spelled two different ways), FRench and ?Spanish? (represented by ES).
+
 ```{r}
 crossref_data %>% 
   count(Language)
 ```
+
+This time, facet on the governing license
 
 ```{r}
 crossref_data %>% 
   count(Licence)
 ```
 
+Facet on the publisher
+
 ```{r}
 crossref_data %>% 
   count(Publisher)
 ```
+
+Facet by authors, and sort by the most prolific.  This field appears to be a multi-valued field that is pipe `|` separated.  How do we count and visualize how many articles have multiple authors?
 
 ```{r}
 crossref_data %>% 
@@ -42,12 +59,17 @@ crossref_data %>%
   arrange(-n)
 ```
 
+Exploring some methods to generate a cound of the pipe delimeter.  `stringr::str_count()` appears to be a great way to calculate this.
 
 ```{r}
 dim(as_tibble(str_split(crossref_data$Authors[5], "\\|", simplify = TRUE)))[2]
 
 str_count(crossref_data$Authors[1:5], "\\|")
 ```
+
+## Transform Data
+
+Use `dplyr::mutate` to generate a new field that calculates how many authors each observation contains.
 
 ```{r}
 crossref_data %>% 
@@ -56,6 +78,11 @@ crossref_data %>%
   select(Authors, multi_authorship)
 ```
 
+## Visualize
+
+### Authors
+
+Generate a histogram distribution of the multiple authorship variable.
 
 ```{r}
 crossref_data %>% 
@@ -67,7 +94,7 @@ crossref_data %>%
   geom_histogram()
 ```
 
-
+This time generate as a bargraph and sort by the most frequent representation.  Articles with five authors is the most frequent representation in the dataset. 
 
 ```{r}
 auth_count <- crossref_data %>% 
@@ -82,7 +109,9 @@ ggplot(auth_count) +
   coord_flip()
 ```
 
+### Explore Subject Headings
 
+Visualize the frequency of multiple subject headings, just as with authors (A bargraph and a histogram)
 
 ```{r}
 crossref_data %>% 
@@ -101,7 +130,11 @@ crossref_data %>%
 ```
 
 
-## Language transformations
+## Data Transformations
+
+Using dplyr, mutate a new variable and transform the data so that 'EN' and 'English' are the same.  Transform 'ES' to "Spanish", and 'FR' to "French".  
+
+`dplyr::case_when()` is one specialized way to perform an `if_else` transformation.
 
 ```{r}
 crossref_data %>% 
@@ -118,6 +151,9 @@ crossref_data <- crossref_data %>%
   )) 
 ```
 
+### Visualize the Languages. 
+
+Stacked Bargraph shows frequency by Language. Each stack of a bar distinguishes the publishers. English Language is huge and somewhat over-powers the reset of the graph.  Make a second graph (below) to drill down on the lesser represented languages.
 
 ```{r}
 crossref_data %>% 
@@ -128,10 +164,11 @@ crossref_data %>%
   theme(legend.position="top") 
 ```
 
+Filter the data to show only the "NA", "French", and "Spanish".
 
 ```{r}
 crossref_data %>% 
-  filter(is.na(Language)) %>% 
+  filter(is.na(Language) | Language == "French" | Language == "Spanish") %>% 
   ggplot() +
   aes(fct_rev(fct_infreq(Language)), fill = Publisher) +
   geom_bar() +
