--- a/README.Rmd
+++ b/README.Rmd
@@ -17,20 +17,22 @@ This is an exploration of how to bootstrap an *Introduction to R* workshop for [
 
 - Library data is not unique
 - Library data may have some consistently unique challenges
-- Data Savvy skills should emphasize technique, tools, and approach
+- Data savvy skills should emphasize technique, tools, and approach
 
     - Techniques:  Reproducible, Scripting
     - Tools:  R / RStudio / Tidyverse
     - Approach:  Open Source and CC-BY are foundational.  
     
-- For anyone intending to develop a core data savvy competency that extends beyond a comfortable beginner, using a fully capable data science scripting language is the best midterm to long-term investment from a skill building perspective. 
+- For anyone intending to develop core competency as a data savvy staffer, i.e. become more than a comfortable beginner, using a fully capable data science scripting language is the best midterm investment from a skill building perspective. 
     
-Narrative:  R has become and tool of choice for data science explorations.  **R** - a statistical programming language - and **Tidyverse** - a consistent way of applying and learning data science - are an excellent toolkit that can can be broadly applied to many advanced beginner to advanced intermediate data summation projects.  R, as a  tool, lends itself to portfolio building, to reproducible, to version control, to flexible and reproducible report writing, to generating various reports from one script, to web scraping and web publishing, and to extensible data savvy techniques.  The tool can have a steep learning curve but will carry a researcher farther entry level tools which are designed for easy of use but that quickly reach an efficiency barrier that is problematic for scalable sharing and collaborative coding.
+Narrative:  R has become and tool of choice for data science explorations.  **R** - a statistical programming language - and **Tidyverse** - a consistent way of applying and learning data science - are an excellent toolkit that can can be broadly applied when producing (and documenting) data summation projects.  This toolkit is an excellent option for advanced beginners to advanced intermediates.  For one, you can build on all that you learn, rather than have to learn 12 different applications.  Additionally, R as a  tool, along with version control, lends itself to reproducibility, portfolio building, on the way writing reports in various formats (MS Word, PPT, slides, web pages, blogs, dashboards, PDF, etc.).  As you become engaged with these best practices you will spend less time on the data science and more time engaging with the data.  You'll write various reports from one script  (web scrape, web publishing, PDF docs) by employing extensible data savvy techniques.  While R (or Python) can have a steep learning curve, the tool will carry a data miner farther than entry level tools -- which, while designed for easy of use, quickly reach an efficiency barrier).  What better to use scalable techniques that were built for sharing, documentation, reproducibility, openness, and collaboration.
 
 ## Process
 
-1. Explore OpenRefine CrossRef dataset (exploring_crossref.Rmd)
-1. Fork DataCarpentry's _R for Soc Sci_
-1. Apply OpenRefine Examples over top of DC's _R for Soc Sci_
-1. Pitch to A.Zoss
-1. Pitch back to C.Eardman (meanwhile, CE will beging a loop in at his end)
+1. [x] Explore OpenRefine CrossRef dataset  (exploring_crossref.Rmd)
+1. [x] Fork Data Carpentry's _R for Soc Sci_
+1. [x] Apply OpenRefine Examples over top of DC's _R for Soc Sci_
+1. [ ] Pitch to A.Zoss
+1. [ ] Pitch back to C.Eardman (meanwhile, CE will begin a loop in at his end)
+1. [ ] Engage with people working on the [Library Carpentry R lesson](https://github.com/LibraryCarpentry/lc-r)
+1. What can be done efficiently?
