--- a/README.Rmd
+++ b/README.Rmd
@@ -8,6 +8,7 @@ output: github_document
 <!-- .md file is auto generate from the .Rmd file.  Do note edit the .md file.  Do edit and knit the .Rmd file -->
 
 ```{r setup, include=FALSE}
+library(tidyverse)
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
@@ -36,3 +37,33 @@ Narrative:  R has become and tool of choice for data science explorations.  **R*
 1. [ ] Pitch back to C.Eardman (meanwhile, CE will begin a loop in at his end)
 1. [ ] Engage with people working on the [Library Carpentry R lesson](https://github.com/LibraryCarpentry/lc-r)
 1. What can be done efficiently?
+
+
+## Example Output
+
+```{r echo=FALSE, fig.width=8}
+plot1 <- ggplot(data = fct_count(starwars$eye_color, sort = T) %>% head(6), aes(x = f, y = n)) +
+  geom_col() +
+  coord_flip() +
+  xlab(NULL) +
+  ylab("count")
+
+plot2 <- ggplot(data = starwars, ) +
+  geom_bar(aes(x = fct_rev(fct_lump(fct_infreq(eye_color), n = 5)))) +
+  geom_bar(data = starwars %>% filter(eye_color == "orange"), aes(eye_color), fill = "orange") +
+  annotate("text", label = "Orange eyes\n       are rare", x = 2, y = 4.2) +
+  coord_flip() +
+  labs(title = "Eye color of Star Wars Characters",
+       x = "",
+       caption = "data source: dplyr::starwars") +
+  theme_bw()
+  
+
+plot3 <- ggplot(data = starwars, aes(x = fct_lump(fct_infreq(eye_color), n = 5))) +
+  geom_bar(aes(fill = gender)) +
+  xlab(NULL)
+
+ggpubr::ggarrange(plot1, plot2)
+
+plot3
+```
